--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -1,7 +1,7 @@
 modalID: 2
 title: Project 2
 date: 2014-07-06
-img: 2.jpg
+img: IMG_2298.jpg
 client: Start Bootstrap
 clientLink: "#"
 category: Web Development
