--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,7 +1,7 @@
 modalID: 6
 title: Project 6
 date: 2014-07-10
-img: 6.jpg
+img: IMG_2256.jpg
 client: Start Bootstrap
 clientLink: "#"
 category: Web Development
