--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,6 +1,7 @@
 modalID: 3
 title: Project 3
 date: 2014-07-07
+thumbnail: thumbnails/FREP4040-0.jpg
 img: FREP4040.jpg
 client: Start Bootstrap
 clientLink: "#"
