--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -1,6 +1,7 @@
 modalID: 5
 title: Project 5
 date: 2014-07-08
+thumbnail: thumbnails/IMG_0481-0.jpg
 img: IMG_0481.jpg
 client: Start Bootstrap
 clientLink: "#"
