--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,6 +1,7 @@
 modalID: 1
 title: Project 1
 date: 2014-07-05
+thumbnail: thumbnails/FAWA3244-0.jpg
 img: FAWA3244.jpg
 client: Start Bootstrap
 clientLink: "#"
