--- a/data/projects/2014-07-09-project-4.yaml
+++ b/data/projects/2014-07-09-project-4.yaml
@@ -1,6 +1,7 @@
 modalID: 4
 title: Project 4
 date: 2014-07-09
+thumbnail: thumbnails/IMG_0525-0.jpg
 img: IMG_0525.jpg
 client: Start Bootstrap
 clientLink: "#"
