replaced dummy project desriptions with the real deal

--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,9 +1,9 @@
 modalID: 1
 title: Project 1
-date: 2014-07-05
-thumbnail: thumbnails/FAWA3244-0.jpg
-img: FAWA3244.jpg
-client: Start Bootstrap
+date: September 2012-September 2013
+thumbnail: IMG_4416.jpg
+img: map.jpg
+client: "Vereniging Deltametropool, DS Landscape Architects, Ministerie van I&M"
 clientLink: "#"
-category: Web Development
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
+category: Let's Talk About the Polders Again
+description: "The “typical” Dutch veenweidegebieden (peat lands) in the Deltametropolis area in the Netherlands can be considered a landscape anomaly, both physically and technically. The green meadowlands are a result of an ingenious water system comprised of ditches, canals, reservoirs and pumping stations which transformed swampy marshlands into productive and usable land for agriculture dating back to the 12th century. Over the last 50 years, stakeholders, developers and policy-makers have give more attention to the quality of their urban areas, often leaving landscapes as an open, underdeveloped afterthought. As urban areas continue to require quality infrastructure, services and residences, so will the Deltametropolis demand an equally as high rural environment that ensures access to recreation, local food and green services, as well as water management and good air quality. This will require new functions of land use in the rural areas. One case study area, the Zouteveensepolder in Midden-Delfland, is analyzed in light of the trends."
