--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,9 +1,9 @@
 modalID: 3
 title: Project 3
-date: 2014-07-07
-thumbnail: thumbnails/FREP4040-0.jpg
-img: FREP4040.jpg
-client: Start Bootstrap
+date: January 2016
+thumbnail: IMG_4418.jpg
+img: IMG_4418.jpg
+client: Karin de Nijs
 clientLink: "#"
-category: Web Development
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
+category: Leegstand in Lombok
+description: Vacancy continues to be both a physical and social problem within today’s urban areas. Alongside the obvious 'waste' of phyiscal space, a large number of vacant premises in a small area gives an impression of forgottenness and lack of care. This is a snowball effect, which can lead to broader issues, such as degradation, feelings of discomfort and further lack of local involvement. In Utrecht, in the area of Lombok, this problem is front and center in the neighborhood Laan van Nieuw Guinea-Spinozaplantsoen. Through qualitative interviewing, anaylzing successful cases with similar problems, and visualizing the spatial composition of the problem, we seek to find the most effective way to bring life back into the neighborhood, recognizing opportunities for collaboration and locations for potential temporary use. The second phase of the project will engage local owners, residents, and civil servants to create a platform where information about vancant propoerties can meet ideas and local initiatves. In doing so, we strive to bring together affected parties and create postive change in the neighborhood. 
