--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,9 +1,9 @@
 modalID: 6
 title: Project 6
-date: 2014-07-10
-thumbnail: thumbnails/IMG_2256-0.jpg
-img: IMG_2256-0.jpg
+date: August 2013
+thumbnail: IMG_2567.jpg
+img: IMG_2573.jpg
 client: Start Bootstrap
 clientLink: "#"
-category: Web Development
+category: FACT SHEET
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
