--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -1,9 +1,9 @@
 modalID: 5
 title: Project 5
-date: 2014-07-08
-thumbnail: thumbnails/IMG_0481-0.jpg
-img: IMG_0481.jpg
-client: Start Bootstrap
+date: May 2012
+thumbnail: exhibit.jpg
+img: GLINTstudios_AtomicCity_0106.jpg
+client: Atomic Cities Research Group
 clientLink: "#"
-category: Web Development
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
+category: (re) MAKING CITY
+description: "The Paducah Gaseous Diffusion Plant consists of four large buildings that were orginally used for the enrichment of uranium. Currently an enormous supply of leftover radioactive material sits under the site. As part of a research project conducted by the National Department of Energy our research studio was asked to create a strategic vision for the closing plant. Through a comparison of case studies with similar problems, we Through a comparison of case studies with similar problems, we identified four themes crucial to the success of the revitilization: education, energy, environment and economy. In our vision the unused buildings offer the ideal test site for the implementation of sustainable energy sources."
