refer to thumbnails

--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -1,9 +1,9 @@
 modalID: 2
 title: Project 2
 date: January 2014-June 2015
-thumbnail: IMG_4415.jpg
+thumbnail: thumbnails/IMG_4415.jpg
 img: IMG_4415.jpg
 client: Federico Savini
 clientLink: "#"
-category: The Social Capital of Do-It-Yourself Urbanism 
-description: "Practices of ‘do-it-yourself’ urbanism are increasingly recognized as a new form of engaged citizenship in urban change. Because of their insurgent nature however, these initiatives are at risk of marginalization and exclusion from recognized urban policy processes. One explanation of this risk is that research tends to focus on external political and legal conditions, while knowledge related to internal group dynamics remains obscure. Building on the concept of social capital, this research examines DIY urbanism from an inside-out perspective, analyzing how internal organization affects external connectivity. Two case studies are analyzed, a group of skateboarders in London and a cultural collective in Amsterdam. We show that DIY communities are likely to achieve end goals when they are exclusive, maintain a common purpose and identity, and make strategic use of intermediaries and experts to create a bridge with other institutions. Such groups, although informal, represent a valuable corner of the society for planners and policy makers."  
+category: The Social Capital of Do-It-Yourself Urbanism
+description: "Practices of ‘do-it-yourself’ urbanism are increasingly recognized as a new form of engaged citizenship in urban change. Because of their insurgent nature however, these initiatives are at risk of marginalization and exclusion from recognized urban policy processes. One explanation of this risk is that research tends to focus on external political and legal conditions, while knowledge related to internal group dynamics remains obscure. Building on the concept of social capital, this research examines DIY urbanism from an inside-out perspective, analyzing how internal organization affects external connectivity. Two case studies are analyzed, a group of skateboarders in London and a cultural collective in Amsterdam. We show that DIY communities are likely to achieve end goals when they are exclusive, maintain a common purpose and identity, and make strategic use of intermediaries and experts to create a bridge with other institutions. Such groups, although informal, represent a valuable corner of the society for planners and policy makers."
