--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,7 +1,7 @@
 modalID: 6
 title: Project 6
 date: August 2013
-thumbnail: IMG_2567.jpg
+thumbnail: thumbnails/IMG_2567.jpg
 img: IMG_2573.jpg
 client: Start Bootstrap
 clientLink: "#"
