--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -1,7 +1,7 @@
 modalID: 1
 title: Project 1
 date: September 2012-September 2013
-thumbnail: IMG_4416.jpg
+thumbnail: thumbnails/IMG_4416.jpg
 img: map.jpg
 client: "Vereniging Deltametropool, DS Landscape Architects, Ministerie van I&M"
 clientLink: "#"
