--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -1,7 +1,7 @@
 modalID: 5
 title: Project 5
 date: May 2012
-thumbnail: exhibit.jpg
+thumbnail: thumbnails/exhibit.jpg
 img: GLINTstudios_AtomicCity_0106.jpg
 client: Atomic Cities Research Group
 clientLink: "#"
