--- a/data/projects/2014-07-09-project-4.yaml
+++ b/data/projects/2014-07-09-project-4.yaml
@@ -1,9 +1,9 @@
 modalID: 4
 title: Project 4
 date: June 2015
-thumbnail: IMG_1505.jpg
+thumbnail: thumbnails/IMG_1505.jpg
 img: poster.jpg
 client: "Pablo Moran, RMUS"
 clientLink: "#"
-category: Who Makes the City? 
+category: Who Makes the City?
 description: "Across the globe, citizens, governments, private parties and academics are witnessing a multiplicity in approaches to urban development happening in their cities. Here top-down planning, bottom-up grassroots movements and entrepreneurial motivations collide, revealing conflicts, existing power relations and opportunities for cooperation. Who will make the city of the future? Dynamic, complex and ever changing, this question begs to be answered now more than ever. This year’s Urban Studies Symposium will explore this larger question – a question that we as students, you as an academic or professional, and all of us as citizens confront in our daily practice and engagement with the urban environment around us. How will these different actors shape how economic, social and territorial development unfolds in cities around the globe? Is it a question of cooperation or one of dividing and conquering? And who is responsible for which part of the city?"
