--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -3,7 +3,7 @@ title: Project 6
 date: August 2013
 thumbnail: thumbnails/IMG_2567.jpg
 img: IMG_2573.jpg
-client: Start Bootstrap
+client: Vereniging Deltametropool
 clientLink: "#"
 category: FACT SHEET
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel enim aliquid dicta ullam in repellendus amet perspiciatis adipisci architecto obcaecati sit voluptas ipsam, deleniti neque placeat tenetur cum tempore velit.
+description: "Short research analyzing the historical relationship between EU agricultural policies and Dutch spatial policies."
