changed all project descriptions and changed some images

--- a/data/projects/2014-07-10-project-6.yaml
+++ b/data/projects/2014-07-10-project-6.yaml
@@ -1,9 +1,9 @@
 modalID: 6
-title: Project 6
+title: From Protective Economy to Free Market
 date: August 2013
 thumbnail: thumbnails/IMG_2567.jpg
 img: IMG_2573.jpg
 client: Vereniging Deltametropool
 clientLink: "#"
-category: FACT SHEET
+category: Economy
 description: "Short research analyzing the historical relationship between EU agricultural policies and Dutch spatial policies."
