--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -1,9 +1,9 @@
 modalID: 5
-title: Project 5
+title: (re) MAKING CITY
 date: May 2012
 thumbnail: thumbnails/exhibit.jpg
 img: GLINTstudios_AtomicCity_0106.jpg
 client: Atomic Cities Research Group
 clientLink: "#"
-category: (re) MAKING CITY
-description: "The Paducah Gaseous Diffusion Plant consists of four large buildings that were orginally used for the enrichment of uranium. Currently an enormous supply of leftover radioactive material sits under the site. As part of a research project conducted by the National Department of Energy our research studio was asked to create a strategic vision for the closing plant. By researching other case studies with similar problems, we identified four themes crucial to the success of the revitilization: education, energy, environment and economy. In our vision the unused buildings offer the ideal test site for the implementation of sustainable energy sources."
+category: strategic regeneration
+description: "The decommisioned Paducah Gaseous Diffusion Plant was orginally used for the enrichment of uranium. Currently a 10 square mile underground plume of contaminants sits under the site. With funding from the National Department of Energy, our research studio spent 36 months visualizing the contaminated area and creating a strategic vision for the future use of the plant. As a Paducah native, I took responsibility for communicating with local parties and sharing the studio's three years of work, which took the form of a traveling exhibtion consisting of past research, interactive models and possible alternative futures."
