added links to collaborators

--- a/data/projects/2014-07-05-project-1.yaml
+++ b/data/projects/2014-07-05-project-1.yaml
@@ -3,6 +3,6 @@ title: "Let's Talk About the Polders Again"
 date: September 2012-September 2013
 thumbnail: thumbnails/IMG_4416.jpg
 img: IMG_2535.jpg
-collaborator: "[Vereniging Deltametropool](http://deltametropool.nl/nl/veenweidegebieden), DS Landscape Architects, Ministerie van I&M"
+collaborator: "[Vereniging Deltametropool](http://deltametropool.nl/nl/veenweidegebieden), Ministerie van I&M"
 category: "urban landscape"
 description: "As urban areas continue to require quality infrastructure, services and residences, so will the Deltametropolis demand an equally as high rural environment that ensures access to recreation, local food and green services, as well as water management and good air quality. What is the potential of the surrounding peatlands to match this need? As part of a larger research project at the Deltametropolis Association, I analyzed the future role of the Zouteveensepolder in Midden-Delfland. Research included exploration of ways to measure the intrinsic, economic and socio-cultural value of these types of landscapes. Interviews with experts and residents, analysis of policy documents, context and spatial analysis using geometric networks were used for the creation of an end publication."
