--- a/config.toml
+++ b/config.toml
@@ -85,5 +85,5 @@ canonifyUrls = true
 		twitter = "katevanhoose"
 		instagram = "kavanhoose"
 		kvknumber = "64862844"
-		pictures = "Let's Talk About the Polders Again, Merten Nefs. Re-Making City, Magnus Lundqvist"
+		pictures = "Let's Talk About the Polders Again, Merten Nefs. (re) Making City, Magnus Lundqvist"
 
