--- a/data/projects/2014-07-06-project-2.yaml
+++ b/data/projects/2014-07-06-project-2.yaml
@@ -3,7 +3,6 @@ title: "DIY Urbanism: an inside-out perspective"
 date: January 2014-June 2015
 thumbnail: thumbnails/IMG_4415.jpg
 img: IMG_4608.JPG
-client: Federico Savini
-clientLink: "#"
+collaborator: Federico Savini
 category: "urban activism" 
 description: "Practices of ‘do-it-yourself’ urbanism are increasingly recognized as a new form of engaged citizenship in urban change. These initiatives however are at risk of marginalization and exclusion from formal urban planning processes. Using the concept of social capital, this research examines DIY urbanism from an inside-out perspective, analyzing how the internal organization of a DIY community affects its ability to external connect to the public, local government and other stakeholders. We compare two case studies, a group of skateboarders in London and a cultural collective in Amsterdam, resulting in an academic article."  
