--- a/data/projects/2014-07-08-project-5.yaml
+++ b/data/projects/2014-07-08-project-5.yaml
@@ -3,7 +3,6 @@ title: (re) MAKING CITY
 date: May 2012
 thumbnail: thumbnails/exhibit.jpg
 img: GLINTstudios_AtomicCity_0106.jpg
-collaborators: "[Atomic Cities Research Group](http://filson-rohrbacher.com/portfolio/doe-strategy/)""
-clientLink: "#"
-category: strategic regeneration
+collaborator: "[Atomic Cities Research Group](http://filson-rohrbacher.com/portfolio/doe-strategy/)"
+category: "strategic regeneration"
 description: "The decommisioned Paducah Gaseous Diffusion Plant was orginally used for the enrichment of uranium. Currently a 10 square mile underground plume of contaminants sits under the site. With funding from the National Department of Energy, our research studio spent 36 months visualizing the contaminated area and creating a strategic vision for the future use of the plant. As a Paducah native, I took responsibility for communicating with local parties and sharing the studio's three years of work, which took the form of a traveling exhibtion consisting of past research, interactive models and possible alternative futures."
