--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -3,7 +3,6 @@ title: "LiViNG Lombok"
 date: January 2016
 thumbnail: thumbnails/IMG_4418.jpg
 img: LivingLombok_logo.png
-client: Karin de Nijs
-clientLink: "#"
+collaborator: Karin de Nijs
 category: "neighborhood regeneration"
 description: "Vacancy continues to be both a physical and social problem within today’s urban areas. Alongside the obvious 'waste' of phyiscal space, a large number of vacant premises in a small area gives an impression of forgottenness and lack of care, leading to other issues, such as degradation, feelings of discomfort and further lack of local involvement. This problem is front and center in the neighborhood Laan van Nieuw-Guinea in Utrecht. By anaylzing successful cases with similar problems and visualizing the problem, we seek to find the most effective way to bring life back into the neighborhood, recognizing opportunities for collaboration and locations for potential temporary use. The second phase of the project will engage local owners, residents, and civil servants to create a platform where information about vancant propoerties can meet ideas and local initiatves." 
