--- a/data/projects/2014-07-09-project-4.yaml
+++ b/data/projects/2014-07-09-project-4.yaml
@@ -3,7 +3,6 @@ title: Who Makes the City?
 date: June 2015
 thumbnail: thumbnails/IMG_1505.jpg
 img: poster.jpg
-client: "Pablo Moran, RMUS"
-clientLink: "#"
+collaborator: "Pablo Moran, Research Masters Urban Studies Students"
 category: urban governance
 description: "Across the globe, citizens, governments, private parties and academics are witnessing a multiplicity in approaches to urban development happening in their cities. Here top-down planning, bottom-up grassroots movements and entrepreneurial motivations collide, revealing conflicts, existing power relations and opportunities for cooperation. Who will make the city of the future? Dynamic, complex and ever changing, this question begs to be answered now more than ever. I was specifically responsible for leading a 15 person workshop, designing marketing materials, and organizing the theme and content of the resulting one-day symposium."
